--- a/index.html
+++ b/index.html
@@ -18,7 +18,21 @@
       </div>
     </header>
     <div class="main">
-
+      <section class="profile">
+        <img src="./images/image.jpg" alt="аватар" class="profile__avatar">
+        <div class="profile__info">
+          <div class="profile__edit">
+            <h1 class="profile__title">Жак-Ив Кусто</h1>
+            <button class="profile__edit-button">
+              <img src="./images/Vector.svg" alt="редактировать" class="profile__edit-image">
+            </button>
+          </div>
+          <p class="profile__subtitle">Исследователь океана</p>
+        </div>
+        <button class="profile__add-button">
+          <img src="./images/Vector(1).svg" alt="добавить" class="profile__add-image">
+        </button>
+      </section>
     </div>
     <footer class="footer">
 
