--- a/index.html
+++ b/index.html
@@ -33,6 +33,50 @@
           <img src="./images/Vector(1).svg" alt="добавить" class="profile__add-image">
         </button>
       </section>
+      <section class="elements">
+        <div class="elements__element">
+          <img src="./images/kirill-pershin-1088404-unsplash.jpg" alt="фотография" class="elements__image">
+          <div class="elements__group">
+            <p class="elements__title">Карачаевск</p>
+            <img src="./images/Vector(2).svg" alt="лайк" class="elements__like">
+          </div>
+        </div>
+        <div class="elements__element">
+          <img src="./images/kirill-pershin-1404681-unsplash.jpg" alt="фотография" class="elements__image">
+          <div class="elements__group">
+            <p class="elements__title">Гора Эльбрус</p>
+            <img src="./images/Vector(2).svg" alt="лайк" class="elements__like">
+          </div>
+        </div>
+        <div class="elements__element">
+          <img src="./images/kirill-pershin-1556355-unsplash.jpg" alt="фотография" class="elements__image">
+          <div class="elements__group">
+            <p class="elements__title">Домбай</p>
+            <img src="./images/Vector(2).svg" alt="лайк" class="elements__like">
+          </div>
+        </div>
+        <div class="elements__element">
+          <img src="./images/shrek.jpg" alt="фотография" class="elements__image">
+          <div class="elements__group">
+            <p class="elements__title">Шрек</p>
+            <img src="./images/Vector(2).svg" alt="лайк" class="elements__like">
+          </div>
+        </div>
+        <div class="elements__element">
+          <img src="./images/F3r1dKaNMns.jpg" alt="фотография" class="elements__image">
+          <div class="elements__group">
+            <p class="elements__title">Радиоголова</p>
+            <img src="./images/Vector(2).svg" alt="лайк" class="elements__like">
+          </div>
+        </div>
+        <div class="elements__element">
+          <img src="./images/i_hlEXQACLc.jpg" alt="фотография" class="elements__image">
+          <div class="elements__group">
+            <p class="elements__title">Биг флоппа и еще текст для многоточия</p>
+            <img src="./images/Vector(2).svg" alt="лайк" class="elements__like">
+          </div>
+        </div>
+      </section>
     </div>
     <footer class="footer">
 
