--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
       </section>
     </div>
     <footer class="footer">
-
+      <p class="footer__copyright">&copy;2020 Mesto Russia</p>
     </footer>
   </div>
 </body>
