--- a/index.html
+++ b/index.html
@@ -81,6 +81,11 @@
     <footer class="footer">
       <p class="footer__copyright">&copy;2020 Mesto Russia</p>
     </footer>
+    <div class="popup">
+      <div class="popup__container">
+        
+      </div>
+    </div>
   </div>
 </body>
 </html>
