--- a/index.html
+++ b/index.html
@@ -81,9 +81,16 @@
     <footer class="footer">
       <p class="footer__copyright">&copy;2020 Mesto Russia</p>
     </footer>
-    <div class="popup">
+    <div class="popup popup_opened"> 
+      
       <div class="popup__container">
-        
+        <button class="popup__close-button">
+          <img src="./images/Vector(1).svg" alt="закрыть" class="popup__close-image">
+        </button>
+        <p class="popup__title">Редактировать профиль</p>
+        <p class="popup__field popup__field_name"></p>
+        <p class="popup__field popup__field_description"></p>
+        <button class="popup__submit-button">Сохранить</button>
       </div>
     </div>
   </div>
