--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
     <footer class="footer">
       <p class="footer__copyright">&copy;2020 Mesto Russia</p>
     </footer>
-    <div class="popup popup_opened"> 
+    <div class="popup"> 
       
       <div class="popup__container">
         <button class="popup__close-button">
@@ -94,5 +94,6 @@
       </div>
     </div>
   </div>
+  <script src="./scripts/index.js"></script>
 </body>
 </html>
