--- a/index.html
+++ b/index.html
@@ -88,8 +88,8 @@
           <img src="./images/Vector(1).svg" alt="закрыть" class="popup__close-image">
         </button>
         <p class="popup__title">Редактировать профиль</p>
-        <p class="popup__field popup__field_name"></p>
-        <p class="popup__field popup__field_description"></p>
+        <input class="popup__field popup__field_name"></input>
+        <input class="popup__field popup__field_description"></input>
         <button class="popup__submit-button">Сохранить</button>
       </div>
     </div>
