--- a/index.html
+++ b/index.html
@@ -22,12 +22,12 @@
         <img src="./images/image.jpg" alt="аватар" class="profile__avatar">
         <div class="profile__info">
           <div class="profile__edit">
-            <h1 class="profile__title">Жак-Ив Кусто</h1>
+            <h1 class="profile__title"></h1>
             <button class="profile__edit-button">
               <img src="./images/Vector.svg" alt="редактировать" class="profile__edit-image">
             </button>
           </div>
-          <p class="profile__subtitle">Исследователь океана</p>
+          <p class="profile__subtitle"></p>
         </div>
         <button class="profile__add-button">
           <img src="./images/Vector(1).svg" alt="добавить" class="profile__add-image">
@@ -83,15 +83,15 @@
     </footer>
     <div class="popup"> 
       
-      <div class="popup__container">
+      <form class="popup__container">
         <button class="popup__close-button">
           <img src="./images/Vector(1).svg" alt="закрыть" class="popup__close-image">
         </button>
         <p class="popup__title">Редактировать профиль</p>
-        <input class="popup__field popup__field_name"></input>
-        <input class="popup__field popup__field_description"></input>
-        <button class="popup__submit-button">Сохранить</button>
-      </div>
+        <input type="text" class="popup__field popup__field_name" name="quantity">
+        <input  type="text" class="popup__field popup__field_description">
+        <input type="submit" class="popup__submit-button" value="Сохранить">
+      </form>
     </div>
   </div>
   <script src="./scripts/index.js"></script>
