--- a/index.html
+++ b/index.html
@@ -88,8 +88,8 @@
           <img src="./images/Vector(1).svg" alt="закрыть" class="popup__close-image">
         </button>
         <p class="popup__title">Редактировать профиль</p>
-        <input type="text" class="popup__field popup__field_name" name="quantity">
-        <input  type="text" class="popup__field popup__field_description">
+        <input type="text" class="popup__field popup__field_name" name="quantity" placeholder="Имя">
+        <input  type="text" class="popup__field popup__field_description" placeholder="О себе">
         <input type="submit" class="popup__submit-button" value="Сохранить">
       </form>
     </div>
