--- a/index.html
+++ b/index.html
@@ -14,8 +14,6 @@
   <div class="page">
     <header class="header">
       <img src="./images/logo.svg" class="header__image" alt="лого место">
-      <div class="header__line">
-      </div>
     </header>
     
       <section class="profile">
@@ -23,57 +21,57 @@
         <div class="profile__info">
           <div class="profile__edit">
             <h1 class="profile__title"></h1>
-            <button class="profile__edit-button">
+            <button class="profile__edit-button" type="button">
               <img src="./images/Vector.svg" alt="редактировать" class="profile__edit-image">
             </button>
           </div>
           <p class="profile__subtitle"></p>
         </div>
-        <button class="profile__add-button">
+        <button class="profile__add-button" type="button">
           <img src="./images/Vector(1).svg" alt="добавить" class="profile__add-image">
         </button>
       </section>
       <section class="elements">
         <div class="elements__element">
-          <img src="./images/kirill-pershin-1088404-unsplash.jpg" alt="фотография" class="elements__image">
+          <img src="./images/kirill-pershin-1088404-unsplash.jpg" alt="заброшенный храм." class="elements__image">
           <div class="elements__group">
-            <p class="elements__title">Карачаевск</p>
-            <img src="./images/Vector(2).svg" alt="лайк" class="elements__like">
+            <h2 class="elements__title">Карачаевск</h2>
+            <button class="elements__like" type="button"><img src="./images/Vector(2).svg" alt="лайк"></button>
           </div>
         </div>
         <div class="elements__element">
-          <img src="./images/kirill-pershin-1404681-unsplash.jpg" alt="фотография" class="elements__image">
+          <img src="./images/kirill-pershin-1404681-unsplash.jpg" alt="гора Эльбрус на закате." class="elements__image">
           <div class="elements__group">
-            <p class="elements__title">Гора Эльбрус</p>
-            <img src="./images/Vector(2).svg" alt="лайк" class="elements__like">
+            <h2 class="elements__title">Гора Эльбрус</h2>
+              <button class="elements__like" type="button"><img src="./images/Vector(2).svg" alt="лайк"></button>
           </div>
         </div>
         <div class="elements__element">
-          <img src="./images/kirill-pershin-1556355-unsplash.jpg" alt="фотография" class="elements__image">
+          <img src="./images/kirill-pershin-1556355-unsplash.jpg" alt="заснеженные горы и осенний лес." class="elements__image">
           <div class="elements__group">
-            <p class="elements__title">Домбай</p>
-            <img src="./images/Vector(2).svg" alt="лайк" class="elements__like">
+            <h2 class="elements__title">Домбай</h2>
+              <button class="elements__like" type="button"><img src="./images/Vector(2).svg" alt="лайк"></button>
           </div>
         </div>
         <div class="elements__element">
-          <img src="./images/shrek.jpg" alt="фотография" class="elements__image">
+          <img src="./images/shrek.jpg" alt="мем с скриншотом из шрека и субтитрами про обращение владимира путина." class="elements__image">
           <div class="elements__group">
-            <p class="elements__title">Шрек</p>
-            <img src="./images/Vector(2).svg" alt="лайк" class="elements__like">
+            <h2 class="elements__title">Шрек</h2>
+              <button class="elements__like" type="button"><img src="./images/Vector(2).svg" alt="лайк"></button>
           </div>
         </div>
         <div class="elements__element">
-          <img src="./images/F3r1dKaNMns.jpg" alt="фотография" class="elements__image">
+          <img src="./images/F3r1dKaNMns.jpg" alt="мем про эволюцию музыки группы Radiohead." class="elements__image">
           <div class="elements__group">
-            <p class="elements__title">Радиоголова</p>
-            <img src="./images/Vector(2).svg" alt="лайк" class="elements__like">
+            <h2 class="elements__title">Радиоголова</h2>
+              <button class="elements__like" type="button"><img src="./images/Vector(2).svg" alt="лайк"></button>
           </div>
         </div>
         <div class="elements__element">
-          <img src="./images/i_hlEXQACLc.jpg" alt="фотография" class="elements__image">
+          <img src="./images/i_hlEXQACLc.jpg" alt="абстрактный мем про каракала." class="elements__image">
           <div class="elements__group">
-            <p class="elements__title">Биг флоппа и еще текст для многоточия</p>
-            <img src="./images/Vector(2).svg" alt="лайк" class="elements__like">
+            <h2 class="elements__title">Биг флоппа и еще текст для многоточия</h2>
+              <button class="elements__like" type="button"><img src="./images/Vector(2).svg" alt="лайк"></button>
           </div>
         </div>
       </section>
@@ -83,14 +81,14 @@
     </footer>
     <div class="popup"> 
       
-      <form class="popup__container">
-        <button class="popup__close-button">
+      <form class="popup__container" method="get" name="person-name-and-job">
+        <button class="popup__close-button" type="button">
           <img src="./images/Vector(1).svg" alt="закрыть" class="popup__close-image">
         </button>
-        <p class="popup__title">Редактировать профиль</p>
-        <input type="text" class="popup__field popup__field_name" name="quantity" placeholder="Имя">
-        <input  type="text" class="popup__field popup__field_description" placeholder="О себе">
-        <input type="submit" class="popup__submit-button" value="Сохранить">
+        <h2 class="popup__title">Редактировать профиль</h2>
+        <input type="text" class="popup__field popup__field_type_name" name="name" placeholder="Имя">
+        <input  type="text" class="popup__field popup__field_type_description" name="description" placeholder="О себе">
+        <input type="submit" class="popup__submit-button" name="submit-button" value="Сохранить">
       </form>
     </div>
   </div>
