--- a/index.html
+++ b/index.html
@@ -20,12 +20,12 @@
         <img src="./images/image.jpg" alt="аватар" class="profile__avatar">
         <div class="profile__info">
           <div class="profile__edit">
-            <h1 class="profile__title"></h1>
+            <h1 class="profile__title">Жак-Ив Кусто</h1>
             <button class="profile__edit-button" type="button">
               <img src="./images/Vector.svg" alt="редактировать" class="profile__edit-image">
             </button>
           </div>
-          <p class="profile__subtitle"></p>
+          <p class="profile__subtitle">Исследователь океана</p>
         </div>
         <button class="profile__add-button" type="button">
           <img src="./images/Vector(1).svg" alt="добавить" class="profile__add-image">
@@ -36,7 +36,9 @@
           <img src="./images/kirill-pershin-1088404-unsplash.jpg" alt="заброшенный храм." class="elements__image">
           <div class="elements__group">
             <h2 class="elements__title">Карачаевск</h2>
-            <button class="elements__like" type="button"><img src="./images/Vector(2).svg" alt="лайк"></button>
+            <button class="elements__like" type="button">
+              <img src="./images/Vector(2).svg" alt="лайк">
+            </button>
           </div>
         </div>
         <div class="elements__element">
@@ -85,7 +87,7 @@
         <button class="popup__close-button" type="button">
           <img src="./images/Vector(1).svg" alt="закрыть" class="popup__close-image">
         </button>
-        <h2 class="popup__title">Редактировать профиль</h2>
+        <h3 class="popup__title">Редактировать профиль</h3>
         <input type="text" class="popup__field popup__field_type_name" name="name" placeholder="Имя">
         <input  type="text" class="popup__field popup__field_type_description" name="description" placeholder="О себе">
         <input type="submit" class="popup__submit-button" name="submit-button" value="Сохранить">
