--- a/index.html
+++ b/index.html
@@ -45,35 +45,45 @@
           <img src="./images/kirill-pershin-1404681-unsplash.jpg" alt="гора Эльбрус на закате." class="elements__image">
           <div class="elements__group">
             <h2 class="elements__title">Гора Эльбрус</h2>
-              <button class="elements__like" type="button"><img src="./images/Vector(2).svg" alt="лайк"></button>
+              <button class="elements__like" type="button">
+                <img src="./images/Vector(2).svg" alt="лайк">
+              </button>
           </div>
         </div>
         <div class="elements__element">
           <img src="./images/kirill-pershin-1556355-unsplash.jpg" alt="заснеженные горы и осенний лес." class="elements__image">
           <div class="elements__group">
             <h2 class="elements__title">Домбай</h2>
-              <button class="elements__like" type="button"><img src="./images/Vector(2).svg" alt="лайк"></button>
+              <button class="elements__like" type="button">
+                <img src="./images/Vector(2).svg" alt="лайк">
+              </button>
           </div>
         </div>
         <div class="elements__element">
           <img src="./images/shrek.jpg" alt="мем с скриншотом из шрека и субтитрами про обращение владимира путина." class="elements__image">
           <div class="elements__group">
             <h2 class="elements__title">Шрек</h2>
-              <button class="elements__like" type="button"><img src="./images/Vector(2).svg" alt="лайк"></button>
+              <button class="elements__like" type="button">
+                <img src="./images/Vector(2).svg" alt="лайк">
+              </button>
           </div>
         </div>
         <div class="elements__element">
           <img src="./images/F3r1dKaNMns.jpg" alt="мем про эволюцию музыки группы Radiohead." class="elements__image">
           <div class="elements__group">
             <h2 class="elements__title">Радиоголова</h2>
-              <button class="elements__like" type="button"><img src="./images/Vector(2).svg" alt="лайк"></button>
+              <button class="elements__like" type="button">
+                <img src="./images/Vector(2).svg" alt="лайк">
+              </button>
           </div>
         </div>
         <div class="elements__element">
           <img src="./images/i_hlEXQACLc.jpg" alt="абстрактный мем про каракала." class="elements__image">
           <div class="elements__group">
             <h2 class="elements__title">Биг флоппа и еще текст для многоточия</h2>
-              <button class="elements__like" type="button"><img src="./images/Vector(2).svg" alt="лайк"></button>
+              <button class="elements__like" type="button">
+                <img src="./images/Vector(2).svg" alt="лайк">
+              </button>
           </div>
         </div>
       </section>
