scroll & defer js

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="./pages/index.css">
     <meta name="author" content="Тимофей Пустарнак">
     <!-- <link rel="shortcut icon" href="./images/kisspng-travel-agent-computer-icons-flight-dipl-ocirc-me-5b27af484e8869.0473470515293274323217.png"> -->
+    <script src="./scripts/index.js" defer></script>
 </head>
 <body>
   <div class="page">
@@ -104,6 +105,5 @@
       </form>
     </div>
   </div>
-  <script src="./scripts/index.js"></script>
 </body>
 </html>
