2 popup open & close

--- a/index.html
+++ b/index.html
@@ -47,8 +47,7 @@
     <footer class="footer">
       <p class="footer__copyright">&copy;2020 Mesto Russia</p>
     </footer>
-    <div class="popup"> 
-      
+    <div class="popup" id="popup-person">   
       <form class="popup__container" method="get" name="person-name-and-job">
         <button class="popup__close-button" type="button">
           <img src="./images/Vector(1).svg" alt="закрыть" class="popup__close-image">
@@ -57,6 +56,18 @@
         <input type="text" class="popup__field popup__field_type_name" name="name" placeholder="Имя">
         <input  type="text" class="popup__field popup__field_type_description" name="description" placeholder="О себе">
         <input type="submit" class="popup__submit-button" name="submit-button" value="Сохранить">
+      </form>
+    </div>
+
+    <div class="popup" id="popup-card">   
+      <form class="popup__container" method="get" name="card-link-&-title">
+        <button class="popup__close-button" type="button">
+          <img src="./images/Vector(1).svg" alt="закрыть" class="popup__close-image">
+        </button>
+        <h3 class="popup__title">Новое место</h3>
+        <input type="text" class="popup__field popup__field_type_name" name="title" placeholder="Название">
+        <input  type="text" class="popup__field popup__field_type_description" name="link" placeholder="Ссылка на картинку">
+        <input type="submit" class="popup__submit-button" name="submit-button" value="Создать">
       </form>
     </div>
   </div>
