add cards & like

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             <img class="elements__image">
             <div class="elements__group">
               <p class="elements__title"></p>
-              <img src="./images/Vector(2).svg" alt="лайк" class="elements__like">
+              <div class="elements__like"></div>
             </div>
           </div>
         </template>
