--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
       <section class="elements">
         <template id="cards">
           <div class="elements__element">
+            <img src="./images/Group.svg" class="elements__delete" alt="удалить">
             <img class="elements__image">
             <div class="elements__group">
               <p class="elements__title"></p>
