popup image template

--- a/index.html
+++ b/index.html
@@ -71,6 +71,16 @@
         <input type="submit" class="popup__submit-button" name="submit-button" value="Создать">
       </form>
     </div>
+
+    <div class="popup popup_opened" id="popup-image">   
+      <div class="popup__case">
+        <img class="popup__image" src="./images/kirill-pershin-1404681-unsplash.jpg">
+        <button class="popup__close-button" type="button">
+          <img src="./images/Vector(1).svg" alt="закрыть" class="popup__close-image">
+        </button>
+        <h3 class="popup__image-title">Челябинская область</h3>
+      </div>
+    </div>
   </div>
 </body>
 </html>
