--- a/index.html
+++ b/index.html
@@ -71,16 +71,17 @@
         <input type="submit" class="popup__submit-button" name="submit-button" value="Создать">
       </form>
     </div>
-
-    <div class="popup popup_opened" id="popup-image">   
-      <div class="popup__case">
-        <img class="popup__image" src="./images/kirill-pershin-1404681-unsplash.jpg">
-        <button class="popup__close-button" type="button">
-          <img src="./images/Vector(1).svg" alt="закрыть" class="popup__close-image">
-        </button>
-        <h3 class="popup__image-title">Челябинская область</h3>
+    <template>
+      <div class="popup" id="popup-image">   
+        <div class="popup__case">
+          <img class="popup__image">
+          <button class="popup__close-button" type="button">
+            <img src="./images/Vector(1).svg" alt="закрыть" class="popup__close-image">
+          </button>
+          <h3 class="popup__image-title"></h3>
+        </div>
       </div>
-    </div>
+    </template>
   </div>
 </body>
 </html>
