--- a/index.html
+++ b/index.html
@@ -55,12 +55,12 @@
         </button>
         <h3 class="popup__title">Редактировать профиль</h3>
         <div class="popup__input-wrapper">
-          <input type="text" class="popup__field popup__field_type_name" name="name" id = 'name-input' placeholder="Имя">
-          <span class="popup__field-error" id = 'name-input-error'>шрекс шрекс</span>
+          <input type="text" class="popup__field popup__field_type_name" name="name" id = 'name-input' placeholder="Имя" required minlength='2' maxlength="40">
+          <span class="popup__field-error" id = 'name-input-error'></span>
         </div>
         <div class="popup__input-wrapper">
-          <input  type="text" class="popup__field popup__field_type_description" id = 'description-input' name="description" placeholder="О себе">
-          <span class="popup__field-error" id = 'description-input-error'>шрекс шрекс</span>
+          <input  type="text" class="popup__field popup__field_type_description" id = 'description-input' name="description" placeholder="О себе" required minlength='2' maxlength="200">
+          <span class="popup__field-error" id = 'description-input-error'></span>
         </div>
         <input type="submit" class="popup__submit-button" name="submit-button" value="Сохранить">
       </form>
@@ -73,12 +73,12 @@
         </button>
         <h3 class="popup__title">Новое место</h3>
         <div class="popup__input-wrapper">
-          <input type="text" class="popup__field popup__field_type_name" name="title" id = 'title-input' placeholder="Название">
-          <span class="popup__field-error" id = 'title-input-error'>шрекс шрекс</span>
+          <input type="text" class="popup__field popup__field_type_name" name="title" id = 'title-input' placeholder="Название" required minlength='2' maxlength="30">
+          <span class="popup__field-error" id = 'title-input-error'></span>
         </div>
         <div class="popup__input-wrapper">
-          <input  type="text" class="popup__field popup__field_type_description" id = 'link-input' name="link" placeholder="Ссылка на картинку">
-          <span class="popup__field-error" id = 'link-input-error'>шрекс шрекс</span>
+          <input  type="url" class="popup__field popup__field_type_description" id = 'link-input' name="link" placeholder="Ссылка на картинку" required>
+          <span class="popup__field-error" id = 'link-input-error'></span>
         </div>
         <input type="submit" class="popup__submit-button" name="submit-button" value="Создать">
       </form>
