--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
     <link rel="stylesheet" href="./pages/index.css">
     <meta name="author" content="Тимофей Пустарнак">
     <!-- <link rel="shortcut icon" href="./images/kisspng-travel-agent-computer-icons-flight-dipl-ocirc-me-5b27af484e8869.0473470515293274323217.png"> -->
-    <script src="./scripts/index.js" defer></script>
 </head>
 <body>
   <div class="page">
@@ -49,7 +48,7 @@
       <p class="footer__copyright">&copy;2020 Mesto Russia</p>
     </footer>
     <div class="popup" id="popup-person">   
-      <form class="popup__container" method="get" name="person-name-and-job">
+      <form class="popup__container" method="get" name="person-name-and-job" novalidate>
         <button class="popup__close-button" type="button">
           <img src="./images/Vector(1).svg" alt="закрыть" class="popup__close-image">
         </button>
@@ -67,7 +66,7 @@
     </div>
 
     <div class="popup" id="popup-card">   
-      <form class="popup__container" method="get" name="card-link-&-title">
+      <form class="popup__container" method="get" name="card-link-&-title" novalidate>
         <button class="popup__close-button" type="button">
           <img src="./images/Vector(1).svg" alt="закрыть" class="popup__close-image">
         </button>
@@ -93,5 +92,7 @@
         </div>
       </div>
   </div>
+  <script src="./scripts/index.js" defer></script>
+  <script src="./scripts/validation.js"></script>
 </body>
 </html>
