--- a/index.html
+++ b/index.html
@@ -33,14 +33,14 @@
       </section>
       <section class="elements">
         <template id="cards">
-          <div class="elements__element">
+          <article class="elements__element">
             <img src="./images/Group.svg" class="elements__delete" alt="удалить">
             <img class="elements__image">
             <div class="elements__group">
               <p class="elements__title"></p>
               <div class="elements__like"></div>
             </div>
-          </div>
+          </article>
         </template>
       </section>
     
