C:/Program Files/Git/

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <img src="./images/image.jpg" alt="аватар" class="profile__avatar">
         <div class="profile__info">
           <div class="profile__edit">
-            <h1 class="profile__title">Жак-Ив Кусто</h1>
+            <h1 class="profile__title">Ultracatlord</h1>
             <button class="profile__edit-button" type="button">
               <img src="./images/Vector.svg" alt="редактировать" class="profile__edit-image">
             </button>
