--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     </header>
     
       <section class="profile">
-        <img src="./images/image.jpg" alt="аватар" class="profile__avatar">
+        <img src="https://static.wikia.nocookie.net/32df47c8-2c98-45f8-b2f5-fe1517b52a9f" alt="аватар" class="profile__avatar">
         <div class="profile__info">
           <div class="profile__edit">
             <h1 class="profile__title">Ultracatlord</h1>
@@ -25,7 +25,7 @@
               <img src="./images/Vector.svg" alt="редактировать" class="profile__edit-image">
             </button>
           </div>
-          <p class="profile__subtitle">Исследователь океана</p>
+          <p class="profile__subtitle">Гигант мысли</p>
         </div>
         <button class="profile__add-button" type="button">
           <img src="./images/Vector(1).svg" alt="добавить" class="profile__add-image">
