--- a/index.html
+++ b/index.html
@@ -92,7 +92,8 @@
         </div>
       </div>
   </div>
-  <script src="./scripts/index.js" defer></script>
+  <script type="module" src="./scripts/Card.js"></script>
+  <script type="module" src="./scripts/index.js"></script>
   <script src="./scripts/validation.js"></script>
 </body>
 </html>
