--- a/index.html
+++ b/index.html
@@ -92,8 +92,8 @@
         </div>
       </div>
   </div>
-  <script type="module" src="./scripts/Card.js"></script>
   <script type="module" src="./scripts/index.js"></script>
-  <script src="./scripts/validation.js"></script>
+  <script type="module" src="./scripts/Card.js"></script>
+  <script type="module" src="./scripts/validation.js"></script>
 </body>
 </html>
