--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
         <input type="submit" class="popup__submit-button" name="submit-button" value="Создать">
       </form>
     </div>
-      <div class="popup" id="popup-image">   
+      <div class="popup popupImage" id="popup-image">   
         <div class="popup__case">
           <img class="popup__image">
           <button class="popup__close-button" type="button">
