--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     <footer class="footer">
       <p class="footer__copyright">&copy;2020 Mesto Russia</p>
     </footer>
-    <div class="popup" id="popup-person">   
+    <div class="popup popupPerson" id="popup-person">   
       <form class="popup__container" method="get" name="person-name-and-job" novalidate>
         <button class="popup__close-button" type="button">
           <img src="./images/Vector(1).svg" alt="закрыть" class="popup__close-image">
@@ -65,7 +65,7 @@
       </form>
     </div>
 
-    <div class="popup" id="popup-card">   
+    <div class="popup popupAddCard" id="popup-card">   
       <form class="popup__container" method="get" name="card-link-&-title" novalidate>
         <button class="popup__close-button" type="button">
           <img src="./images/Vector(1).svg" alt="закрыть" class="popup__close-image">
