--- a/src/index.html
+++ b/src/index.html
@@ -92,6 +92,6 @@
         </div>
       </div>
   </div>
-  <script type="module" src="./pages/index.js"></script>
+  <script type="module" src="./index.js"></script>
 </body>
 </html>
