--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,7 @@
     <!-- <meta name="keywords" content=""> -->
     <meta name="author" content="Тимофей Пустарнак">
     <!-- <link rel="shortcut icon" href="./images/kisspng-travel-agent-computer-icons-flight-dipl-ocirc-me-5b27af484e8869.0473470515293274323217.png"> -->
+    <link rel='stylesheet' href="./pages/index.css">
 </head>
 <body>
   <div class="page">
@@ -91,5 +92,6 @@
         </div>
       </div>
   </div>
+  <script type="module" src="./index.js"></script>
 </body>
 </html>
