--- a/src/index.html
+++ b/src/index.html
@@ -35,7 +35,7 @@
         <template id="cards">
           <article class="elements__element">
             <img src="./images/Group.svg" class="elements__delete" alt="удалить">
-            <img class="elements__image">
+            <img class="elements__image" src="/" alt="/">
             <div class="elements__group">
               <p class="elements__title"></p>
               <div class="elements__like"></div>
@@ -84,7 +84,7 @@
     </div>
       <div class="popup popupImage" id="popup-image">   
         <div class="popup__case">
-          <img class="popup__image">
+          <img class="popup__image"  src="/" alt="/">
           <button class="popup__close-button" type="button">
             <img src="./images/Vector(1).svg" alt="закрыть" class="popup__close-image">
           </button>
