9 cards and patch user info

--- a/src/index.html
+++ b/src/index.html
@@ -17,15 +17,15 @@
     </header>
     
       <section class="profile">
-        <img src="https://static.wikia.nocookie.net/32df47c8-2c98-45f8-b2f5-fe1517b52a9f" alt="аватар" class="profile__avatar">
+        <img src="" alt="аватар" class="profile__avatar">
         <div class="profile__info">
           <div class="profile__edit">
-            <h1 class="profile__title">Ultracatlord</h1>
+            <h1 class="profile__title"></h1>
             <button class="profile__edit-button" type="button">
               <img src="./images/Vector.svg" alt="редактировать" class="profile__edit-image">
             </button>
           </div>
-          <p class="profile__subtitle">Гигант мысли</p>
+          <p class="profile__subtitle"></p>
         </div>
         <button class="profile__add-button" type="button">
           <img src="./images/Vector(1).svg" alt="добавить" class="profile__add-image">
