--- a/src/index.html
+++ b/src/index.html
@@ -38,7 +38,10 @@
             <img class="elements__image" src="/" alt="/">
             <div class="elements__group">
               <p class="elements__title"></p>
-              <div class="elements__like"></div>
+              <div class="elements__group-like">
+                <div class="elements__like"></div>
+                <p class="elements__like-counter">10</p>
+              </div>
             </div>
           </article>
         </template>
