--- a/src/index.html
+++ b/src/index.html
@@ -18,6 +18,7 @@
     
       <section class="profile">
         <img src="" alt="аватар" class="profile__avatar">
+        <div class="profile__avatar-edit"></div>
         <div class="profile__info">
           <div class="profile__edit">
             <h1 class="profile__title"></h1>
