C:/Program Files/Git/

--- a/src/index.html
+++ b/src/index.html
@@ -103,7 +103,7 @@
             <img src="./images/Vector(1).svg" alt="закрыть" class="popup__close-image">
           </button>
           <h3 class="popup__title popup__title_popup-close">Вы уверены?</h3>
-          <input type="button" class="popup__submit-button popup__submit-button-close" name="submit-button" value="Да">
+          <input type="button" class="popup__submit-button popup__submit-button-close" name="submit-button" id = "popup-confirm-button" value="Да">
         </form>
       </div>
 
