--- a/src/index.html
+++ b/src/index.html
@@ -1,42 +1,57 @@
 <!DOCTYPE html>
 <html lang="ru">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+  <head>
+    <meta charset="UTF-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, maximum-scale=1"
+    />
     <title>Mesto</title>
     <!-- <meta name="description" content=""> -->
     <!-- <meta name="keywords" content=""> -->
-    <meta name="author" content="Тимофей Пустарнак">
+    <meta name="author" content="Тимофей Пустарнак" />
     <!-- <link rel="shortcut icon" href="./images/kisspng-travel-agent-computer-icons-flight-dipl-ocirc-me-5b27af484e8869.0473470515293274323217.png"> -->
-    <link rel='stylesheet' href="./pages/index.css">
-</head>
-<body>
-  <div class="page">
-    <header class="header">
-      <img src="./images/logo.svg" class="header__image" alt="лого место">
-    </header>
-    
+    <!-- <link rel='stylesheet' href="./pages/index.css"> -->
+  </head>
+  <body>
+    <div class="page">
+      <header class="header">
+        <img src="./images/logo.svg" class="header__image" alt="лого место" />
+      </header>
+
       <section class="profile">
-        <img src="./images/pen.svg" alt="аватар" class="profile__avatar">
+        <img src="./images/pen.svg" alt="аватар" class="profile__avatar" />
         <div class="profile__avatar-edit"></div>
         <div class="profile__info">
           <div class="profile__edit">
             <h1 class="profile__title"></h1>
             <button class="profile__edit-button" type="button">
-              <img src="./images/Vector.svg" alt="редактировать" class="profile__edit-image">
+              <img
+                src="./images/Vector.svg"
+                alt="редактировать"
+                class="profile__edit-image"
+              />
             </button>
           </div>
           <p class="profile__subtitle"></p>
         </div>
         <button class="profile__add-button" type="button">
-          <img src="./images/Vector(1).svg" alt="добавить" class="profile__add-image">
+          <img
+            src="./images/Vector(1).svg"
+            alt="добавить"
+            class="profile__add-image"
+          />
         </button>
       </section>
       <section class="elements">
         <template id="cards">
           <article class="elements__element">
-            <img src="./images/Group.svg" class="elements__delete" alt="удалить">
-            <img class="elements__image" src="/" alt="/">
+            <img
+              src="./images/Group.svg"
+              class="elements__delete"
+              alt="удалить"
+            />
+            <img class="elements__image" src="/" alt="/" />
             <div class="elements__group">
               <p class="elements__title"></p>
               <div class="elements__group-like">
@@ -47,81 +62,188 @@
           </article>
         </template>
       </section>
-    
-    <footer class="footer">
-      <p class="footer__copyright">&copy;2020 Mesto Russia</p>
-    </footer>
-    <div class="popup popupPerson" id="popup-person">   
-      <form class="popup__container" method="get" name="person-name-and-job" novalidate>
-        <button class="popup__close-button" type="button">
-          <img src="./images/Vector(1).svg" alt="закрыть" class="popup__close-image">
-        </button>
-        <h3 class="popup__title">Редактировать профиль</h3>
-        <div class="popup__input-wrapper">
-          <input type="text" class="popup__field popup__field_type_name" name="name" id = 'name-input' placeholder="Имя" required minlength='2' maxlength="40">
-          <span class="popup__field-error" id = 'name-input-error'></span>
-        </div>
-        <div class="popup__input-wrapper">
-          <input  type="text" class="popup__field popup__field_type_description" id = 'description-input' name="description" placeholder="О себе" required minlength='2' maxlength="200">
-          <span class="popup__field-error" id = 'description-input-error'></span>
-        </div>
-        <input type="submit" class="popup__submit-button" name="submit-button" value="Сохранить" id='popup-person-submit-button'>
-      </form>
-    </div>
 
-    <div class="popup popupAddCard" id="popup-card">   
-      <form class="popup__container" method="get" name="card-link-&-title" novalidate>
-        <button class="popup__close-button" type="button">
-          <img src="./images/Vector(1).svg" alt="закрыть" class="popup__close-image">
-        </button>
-        <h3 class="popup__title">Новое место</h3>
-        <div class="popup__input-wrapper">
-          <input type="text" class="popup__field popup__field_type_name" name="title" id = 'title-input' placeholder="Название" required minlength='2' maxlength="30">
-          <span class="popup__field-error" id = 'title-input-error'></span>
-        </div>
-        <div class="popup__input-wrapper">
-          <input  type="url" class="popup__field popup__field_type_description" id = 'link-input' name="link" placeholder="Ссылка на картинку" required>
-          <span class="popup__field-error" id = 'link-input-error'></span>
-        </div>
-        <input type="submit" class="popup__submit-button" name="submit-button" value="Создать" id="popup-addCard-button">
-      </form>
-    </div>
-
-      <div class="popup popupImage" id="popup-image">   
-        <div class="popup__case">
-          <img class="popup__image"  src="/" alt="/">
+      <footer class="footer">
+        <p class="footer__copyright">&copy;2020 Mesto Russia</p>
+      </footer>
+      <div class="popup popupPerson" id="popup-person">
+        <form
+          class="popup__container"
+          method="get"
+          name="person-name-and-job"
+          novalidate
+        >
           <button class="popup__close-button" type="button">
-            <img src="./images/Vector(1).svg" alt="закрыть" class="popup__close-image">
+            <img
+              src="./images/Vector(1).svg"
+              alt="закрыть"
+              class="popup__close-image"
+            />
+          </button>
+          <h3 class="popup__title">Редактировать профиль</h3>
+          <div class="popup__input-wrapper">
+            <input
+              type="text"
+              class="popup__field popup__field_type_name"
+              name="name"
+              id="name-input"
+              placeholder="Имя"
+              required
+              minlength="2"
+              maxlength="40"
+            />
+            <span class="popup__field-error" id="name-input-error"></span>
+          </div>
+          <div class="popup__input-wrapper">
+            <input
+              type="text"
+              class="popup__field popup__field_type_description"
+              id="description-input"
+              name="description"
+              placeholder="О себе"
+              required
+              minlength="2"
+              maxlength="200"
+            />
+            <span
+              class="popup__field-error"
+              id="description-input-error"
+            ></span>
+          </div>
+          <input
+            type="submit"
+            class="popup__submit-button"
+            name="submit-button"
+            value="Сохранить"
+            id="popup-person-submit-button"
+          />
+        </form>
+      </div>
+
+      <div class="popup popupAddCard" id="popup-card">
+        <form
+          class="popup__container"
+          method="get"
+          name="card-link-&-title"
+          novalidate
+        >
+          <button class="popup__close-button" type="button">
+            <img
+              src="./images/Vector(1).svg"
+              alt="закрыть"
+              class="popup__close-image"
+            />
+          </button>
+          <h3 class="popup__title">Новое место</h3>
+          <div class="popup__input-wrapper">
+            <input
+              type="text"
+              class="popup__field popup__field_type_name"
+              name="title"
+              id="title-input"
+              placeholder="Название"
+              required
+              minlength="2"
+              maxlength="30"
+            />
+            <span class="popup__field-error" id="title-input-error"></span>
+          </div>
+          <div class="popup__input-wrapper">
+            <input
+              type="url"
+              class="popup__field popup__field_type_description"
+              id="link-input"
+              name="link"
+              placeholder="Ссылка на картинку"
+              required
+            />
+            <span class="popup__field-error" id="link-input-error"></span>
+          </div>
+          <input
+            type="submit"
+            class="popup__submit-button"
+            name="submit-button"
+            value="Создать"
+            id="popup-addCard-button"
+          />
+        </form>
+      </div>
+
+      <div class="popup popupImage" id="popup-image">
+        <div class="popup__case">
+          <img class="popup__image" src="/" alt="/" />
+          <button class="popup__close-button" type="button">
+            <img
+              src="./images/Vector(1).svg"
+              alt="закрыть"
+              class="popup__close-image"
+            />
           </button>
           <h3 class="popup__image-title"></h3>
         </div>
       </div>
 
-      <div class="popup popupConfirm" id="popup-close">   
-        <form class="popup__container popup__container_small" method="get" name="card-link-&-title" novalidate>
+      <div class="popup popupConfirm" id="popup-close">
+        <form
+          class="popup__container popup__container_small"
+          method="get"
+          name="card-link-&-title"
+          novalidate
+        >
           <button class="popup__close-button" type="button">
-            <img src="./images/Vector(1).svg" alt="закрыть" class="popup__close-image">
+            <img
+              src="./images/Vector(1).svg"
+              alt="закрыть"
+              class="popup__close-image"
+            />
           </button>
           <h3 class="popup__title popup__title_popup-close">Вы уверены?</h3>
-          <input type="button" class="popup__submit-button popup__submit-button-close" name="submit-button" id = "popup-confirm-button" value="Да">
+          <input
+            type="button"
+            class="popup__submit-button popup__submit-button-close"
+            name="submit-button"
+            id="popup-confirm-button"
+            value="Да"
+          />
         </form>
       </div>
 
-      <div class="popup popupEditAvatar" id="popup-avatar">   
-        <form class="popup__container" method="get" name="card-link-&-title" novalidate>
+      <div class="popup popupEditAvatar" id="popup-avatar">
+        <form
+          class="popup__container"
+          method="get"
+          name="card-link-&-title"
+          novalidate
+        >
           <button class="popup__close-button" type="button">
-            <img src="./images/Vector(1).svg" alt="закрыть" class="popup__close-image">
+            <img
+              src="./images/Vector(1).svg"
+              alt="закрыть"
+              class="popup__close-image"
+            />
           </button>
           <h3 class="popup__title">Обновить аватар</h3>
           <div class="popup__input-wrapper">
-            <input  type="url" class="popup__field popup__field_type_description" id = 'link-input-edit' name="link" placeholder="Ссылка на картинку" required>
-            <span class="popup__field-error" id = 'link-input-edit-error'></span>
+            <input
+              type="url"
+              class="popup__field popup__field_type_description"
+              id="link-input-edit"
+              name="link"
+              placeholder="Ссылка на картинку"
+              required
+            />
+            <span class="popup__field-error" id="link-input-edit-error"></span>
           </div>
-          <input type="submit" class="popup__submit-button" name="submit-button" value="Сохранить" id ='popup-edit-avatar-button'>
+          <input
+            type="submit"
+            class="popup__submit-button"
+            name="submit-button"
+            value="Сохранить"
+            id="popup-edit-avatar-button"
+          />
         </form>
       </div>
-
-  </div>
-  <script type="module" src="./pages/index.js"></script>
-</body>
+    </div>
+    <!-- <script type="module" src="./pages/index.js"></script> -->
+  </body>
 </html>
